--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Food</title>
-   <! <!link rel="stylesheet" href="css/bootstrap.min.css"> >
     <link rel="stylesheet" href="style.css">
-    <!link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
 <body>
   <header>
@@ -21,7 +19,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        </div><!-- navbar header -->
+        </div>
+
+        <!-- navbar header -->
 
         <div class="collapse navbar-collapse" id="collapsable-nav">
           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
@@ -39,42 +39,26 @@
       <div class="col-md-4 col-sm-6 col-xs-12"  id="chicken">
       <article>
         <h3 class="text-center">Chicken</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
+        <p>
+chicken
+Also found in: Dictionary, Thesaurus, Medical, Acronyms, Idioms, Wikipedia.
+Related to chicken: chicken casserole, chicken salad
+chicken: see poultry
+
+.
+The Columbia Electronic Encyclopedia™ Copyright © 2013, Columbia University Press. Licensed from Columbia University Press. All rights reserved. www.cc.columbia.edu/cu/cup/
+The following article is from The Great Soviet Encyclopedia (1979). It might be outdated or ideologically biased.
+Chicken 
+
+a domestic bird of the order Galliformes. Descended from the wild jungle fowl, chickens are the most widely domesticated species of poultry. They are raised for their meat and eggs, and their feathers and down are also used.
+
+Chickens are classified by their principal products into egg, dual-purpose (meat and eggs), and meat breeds. Each has specific anatomical and physiological characteristics. Laying hens are small, grow rapidly, and mature early. The meat and dual-purpose breeds are larger, have well-developed muscles, and mature later.
+
+Roosters develop bony processes, spurs, on the lower part of the metatarsus. Both hens and roosters have crests, which come in such shapes as leaf (with several teeth), rose, and pea. Hens of egg breeds most commonly have leaf crests, which fall to the side at the second or third tooth. The beak is slightly curved. In most breeds, the beak and metatarsus are the same color: yellow, pale pink, black, and so on. Plumage color varies.
+
+Hens of egg breeds weigh 1.8–2.2 kg and roosters, 2.7–3.0 kg; of dual-purpose breeds, 2.5–3.0 kg and 3.5–4.0 kg; and of meat breeds, 3.0–3.5 kg and 3.5–4.5 kg. Chicks at birth weigh 30–35 g. Chicks of dual-purpose breeds at 70–80 days usually weigh 20–30 percent more than those of egg breeds. Broilers attain a weight of 1.5–1.6 kg by 60–65 days of age. The white meat of broilers is a dietetic product; it contains over 20 percent complete proteins and only 5–7 percent fat.
+
+Hens reach sexual maturity (age at the time of laying the first egg) at five or six months. Birds of egg breeds mature earlier than those of dual-purpose breeds. Annual production of layers is 200–220 eggs and at the best purebred farms, 220–250 (the record is 365). The highest egg production is found in crossbred and interlineal hybrid birds selected for egg productivity and egg quality. A hen’s early eggs weigh 40–50 g; by the age of one year she lays eggs weighing 55–65 g. Hens of dual-purpose breeds lay smaller eggs than those of laying breeds. Egg laying ceases in hens with the onset of molting, which in good layers lasts for two to three weeks and two months or more in poor ones. After molting, hens resume laying if feeding and maintenance conditions are good. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
         </article>
       </div>
     
@@ -83,31 +67,10 @@
       <div id="beef" class="col-md-4 col-sm-6 col-xs-12">
       <article>
         <h3 class="text-center">Beef</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
+        <p> flesh of cattle prepared for food. It has become one of the chief products of the meatpacking
+
+
+ industry and is sold either chilled, frozen, or cured. The leading beef consumers, as well as exporters, are the U.S., the European Union, Brazil, Argentina, and Australia. The carcasses, after being dressed, are split in half along the back and then cut into fore- and hindquarters. In the United States, beef usually reaches local dealers in this form and is cut by them into portions, e.g., shank, round, rump, loins (roasts and steaks), flank, rib (roasts), chuck, plate, and brisket. In addition, the heart, kidneys, liver, tongue, stomach wall (tripe), and tail are edible. The tenderest beef comes from steers (castrated males) and heifers (females that have not calved). The meat should be a clear, light-red color and firm. Beef from older cattle is converted into various products, such as beef extract, sausage, corned beef, and canned or potted products. Beef is a source of proteins, minerals, and vitamins, but many health professionals, stressing risks of heart disease and cancer from eating too much saturated fat, have urged cattle growers to produce leaner, organically fed beef and have encouraged the public to choose leaner cuts, serve a three-ounce portion, and reduce the frequency of beef in the diet.<a href="#home" class="visible-xs visible-sm">Back to top</a></p>
         </article>
       </div>
     
@@ -117,48 +80,11 @@
       <div id="sushi" class="col-md-4 col-sm-12 col-xs-12">
       <article>
         <h3 class="text-center">Sushi</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
+        <p>For most people it is raw fish, star dish of Japanese cuisine, but is it that simple? Not at all. Sushi is actually a way to prepare rice, not raw fish with accompaniment ... In fact, sushi always carries rice but it does not have to carry fish.
+
+Sushi is the most famous Japanese dish outside of Japan and one of the most popular among Japanese, who enjoy sushi on special occasions.  And as such, it was evolved outside that country, influenced by different Western cultures, especially in USA. That is why many of the different types of sushi have denomination of localities of USA (California roll, New York roll, etc.)
+
+The name of sushi is a generic name of different types, combinations of ingredients and forms of a typical Japanese food, and basically are made from Japanese type rice and different seafood (fresh fish, prawns, seaweed etc) and vegetables. <a href="#home" class="visible-xs visible-sm">Back to top</a></p>
         </article>
       </div>
     </section>
